# market_maker_calculator

./: .gitignore  check_brokers.cjs  check_dates.cjs  index.html  inspect_excel_files.cjs  package-lock.json  package.json  verify_fix.cjs
.github/workflows/: build-windows.yml
docs/: mismatch-investigation.md  product-grouping.md
docs/superpowers/plans/: 2026-03-26-analytics-feature.md
docs/superpowers/specs/: 2026-03-26-analytics-feature-design.md
sample-data/: 做市交易数据_20260312.xlsx  做市交易数据_20260313.xlsx  做市交易数据_20260314.xlsx  做市交易数据_20260317.xlsx  做市交易数据_20260318.xlsx  做市交易数据_sample.xlsx  做市成交汇总_20260317星期二.xlsx  做市成交汇总_20260317星期二2.xlsx  做市成交汇总_20260317星期二4.xlsx  做市成交汇总_20260318星期三.xlsx
scripts/: generate-sample-data.mjs  verify-data.mjs
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: AnalyticsView.tsx  DateSelector.tsx  DimensionSelector.tsx  ExportButton.tsx  FileList.tsx  FileUploader.tsx  PivotExportButton.tsx  PivotTable.tsx  SummaryTable.tsx  TooltipCell.tsx  ViewSwitcher.tsx  YearSelector.tsx  YearlyExportButton.tsx  YearlyTable.tsx
src/constants/: etfColumns.ts  etfNames.ts
src/hooks/: useAnalyticsData.ts  useFileManager.ts  usePivotData.ts  useSummaryData.ts  useYearlyData.ts
src/services/: analyticsAggregator.ts  anomalyDetector.ts  dataAggregator.ts  etfNameService.ts  excelExporter.ts  excelParser.ts  pivotAggregator.ts  pivotExporter.ts  yearlyAggregator.ts  yearlyExporter.ts
src/types/: analytics.ts  index.ts
(+4 files in other folders)
