[package]
name = "market-maker-calculator"
version = "0.1.0"
description = "做市数据汇总工具"
authors = ["you"]
edition = "2021"

[lib]
name = "market_maker_calculator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

